# neos-mod-organizer

./: Cargo.toml
src/: config.rs  install.rs  launch.rs  main.rs  manager.rs  manifest.rs  resolver.rs  tests.rs  utils.rs  version.rs
src/ui/: first_time.rs  mod.rs
src/ui/manager/: launcher.rs  mod.rs  mod_list.rs  more_info.rs  tests.rs
